src/executors/cann_shim/operator_adapter.h

/* ── Base Operator Lifecycle ─────────────────────────────────────────── */

CANN_ADAPTER_EXPORT CannOperatorHandle cann_operator_create(const char* type, const char* name);
CANN_ADAPTER_EXPORT CannOperatorHandle cann_operator_create_registered(const char* type, const char* name);
CANN_ADAPTER_EXPORT void               cann_operator_destroy(CannOperatorHandle op);
/* ── Input/Output Connections ────────────────────────────────────────── */

CANN_ADAPTER_EXPORT CannStatus cann_operator_set_input(CannOperatorHandle op,
                                    const char* name,
                                    CannOperatorHandle input_op);
/* ── Attributes ──────────────────────────────────────────────────────── */

CANN_ADAPTER_EXPORT CannStatus cann_operator_set_attr_int64(CannOperatorHandle op,
                                          const char* name,
                                          int64_t value);
CANN_ADAPTER_EXPORT CannStatus cann_operator_set_attr_float(CannOperatorHandle op,
                                          const char* name,
                                          float value);
CANN_ADAPTER_EXPORT CannStatus cann_operator_set_attr_string(CannOperatorHandle op,
                                           const char* name,
                                           const char* value);
CANN_ADAPTER_EXPORT CannStatus cann_operator_set_attr_int64_list(CannOperatorHandle op,
                                               const char* name,
                                               const int64_t* values,
                                               int32_t count);
CANN_ADAPTER_EXPORT CannStatus cann_operator_set_attr_tensor_raw(CannOperatorHandle op,
                                          const char* name,
                                          const void* data,
                                          uint32_t size,
                                          const int64_t* shape,
                                          int32_t shape_count,
                                          CannDataType dtype);
CANN_ADAPTER_EXPORT CannStatus cann_operator_set_attr_tensor_raw_format(CannOperatorHandle op,
                                          const char* name,
                                          const void* data,
                                          uint32_t size,
                                          const int64_t* shape,
                                          int32_t shape_count,
                                          CannDataType dtype,
                                          int32_t format);
CANN_ADAPTER_EXPORT CannStatus cann_operator_update_input_desc(CannOperatorHandle op,
                                              const char* name,
                                              CannOpTensorDescHandle desc);
/* ── Dynamic Input / Output ──────────────────────────────────────────── */

CANN_ADAPTER_EXPORT CannStatus cann_operator_create_dynamic_input(CannOperatorHandle op,
                                               const char* name,
                                               uint32_t num);
CANN_ADAPTER_EXPORT CannStatus cann_operator_create_dynamic_output(CannOperatorHandle op,
                                                const char* name,
                                                uint32_t num);
CANN_ADAPTER_EXPORT CannStatus cann_operator_set_dynamic_input_by_index(CannOperatorHandle op,
                                                const char* name,
                                                uint32_t index,
                                                CannOperatorHandle input_op);
CANN_ADAPTER_EXPORT CannOperatorHandle cann_op_data_with_name(const char* name);
CANN_ADAPTER_EXPORT CannOperatorHandle cann_op_const_with_name(const char* name);
CANN_ADAPTER_EXPORT CannOperatorHandle cann_op_net_output_with_name(const char* name, int32_t input_count);