src/executors/cann_shim/model_adapter.h

/* ── Model lifecycle ──────────────────────────────────────────────────── */

CANN_ADAPTER_EXPORT CannModelHandle cann_model_create();
CANN_ADAPTER_EXPORT CannModelHandle cann_model_create_with_name(const char* name);
CANN_ADAPTER_EXPORT void            cann_model_destroy(CannModelHandle model);
/* ── Model / Graph ────────────────────────────────────────────────────── */

CANN_ADAPTER_EXPORT CannStatus        cann_model_set_graph(CannModelHandle model, CannGraphHandle graph);
/* ── Build Options ────────────────────────────────────────────────────── */

CANN_ADAPTER_EXPORT CannBuildOptionsHandle cann_build_options_create(void);
CANN_ADAPTER_EXPORT CannStatus cann_build_options_set_device_order(CannBuildOptionsHandle options,
                                                  const int32_t* devices,
                                                  int32_t device_count);
CANN_ADAPTER_EXPORT CannStatus cann_build_options_set_input_shapes(CannBuildOptionsHandle options,
                                                  const int64_t* const* shapes,
                                                  const int32_t* shape_counts,
                                                  int32_t num_inputs);
/* ── Model Building ──────────────────────────────────────────────────── */

CANN_ADAPTER_EXPORT CannHiaiIrBuildHandle cann_hiai_ir_build_create();
CANN_ADAPTER_EXPORT CannStatus cann_hiai_ir_build_destroy(CannHiaiIrBuildHandle build);
CANN_ADAPTER_EXPORT CannStatus cann_model_create_buff_default(CannHiaiIrBuildHandle build, CannModelHandle model,
                                           CannModelBuffer* output_buffer);
CANN_ADAPTER_EXPORT CannStatus cann_build_model(CannHiaiIrBuildHandle build, CannModelHandle model,
                               CannBuildOptionsHandle options,
                               CannModelBuffer* output_buffer);
CANN_ADAPTER_EXPORT void cann_model_buffer_destroy(CannHiaiIrBuildHandle build, CannModelBuffer* buffer);