src/executors/cann_shim/io_tensor_adapter.h

/* ── Tensor lifecycle (wraps hiai::AiTensor) ─────────────────────────── */

CANN_ADAPTER_EXPORT CannIOTensorHandle cann_io_tensor_create();
CANN_ADAPTER_EXPORT void     cann_io_tensor_destroy(CannIOTensorHandle tensor);
/* ── Tensor data access ──────────────────────────────────────────────── */

CANN_ADAPTER_EXPORT CannStatus cann_io_tensor_set_data(CannIOTensorHandle tensor,
                                 const void* data,
                                 uint32_t size);
CANN_ADAPTER_EXPORT void*      cann_io_tensor_get_buffer(CannIOTensorHandle tensor);
/* ── Tensor Init (wraps hiai::AiTensor::Init) ─────────────────────────── */

CANN_ADAPTER_EXPORT CannStatus cann_io_tensor_init(CannIOTensorHandle tensor,
                              CannIOTensorDimensionHandle dim,
                              CannDataType dtype);
CANN_ADAPTER_EXPORT CannStatus cann_io_tensor_init_with_data(CannIOTensorHandle tensor,
                                        const void* data,
                                        CannIOTensorDimensionHandle dim,
                                        CannDataType dtype);
CANN_ADAPTER_EXPORT CannIOTensorDimensionHandle cann_io_tensor_dim_create_nd(const uint32_t* dims,
                                                      int32_t dim_count);
CANN_ADAPTER_EXPORT void     cann_io_tensor_dim_destroy(CannIOTensorDimensionHandle dim);