src/executors/cann_shim.rs

/*
 * SPDX-FileCopyrightText: Copyright (c) 2026 Shubham Gupta <shubhamg13.work@gmail.com>
 * SPDX-License-Identifier: Apache-2.0
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

//! CANN shim — direct FFI bridge to the C++ adapter library.
//!
//! With `cann-runtime`: the adapter is compiled and linked via `build.rs`.
//! All symbols are resolved at build time — no runtime `.so` dependency.
//!
//! Without `cann-runtime`: `get_shim()` returns `None`, all dispatch
//! returns `Err` (mock mode for CI).

use std::sync::LazyLock;

use crate::error::{Error, Result};
use crate::executors::cann_shim_types::CannShim;

pub(crate) use crate::executors::cann_shim_types::{CannModelBuffer, CannTensorDesc};

#[cfg(feature = "cann-runtime")]
unsafe extern "C" {
    // Dispatch: manager lifecycle
    fn cann_model_manager_create() -> *mut std::ffi::c_void;
    fn cann_model_manager_init(manager: *mut std::ffi::c_void) -> i32;
    fn cann_model_manager_load(
        manager: *mut std::ffi::c_void,
        descs: *const *mut std::ffi::c_void,
        count: i32,
    ) -> i32;
    fn cann_model_manager_process(
        manager: *mut std::ffi::c_void,
        context: *mut std::ffi::c_void,
        inputs: *const *mut std::ffi::c_void,
        input_count: i32,
        outputs: *const *mut std::ffi::c_void,
        output_count: i32,
        timeout_ms: u32,
        stamp: *mut i32,
    ) -> i32;
    fn cann_model_manager_destroy(manager: *mut std::ffi::c_void);

    // Dispatch: model descriptor
    fn cann_model_desc_create(
        name: *const std::ffi::c_char,
        frequency: i32,
        framework: i32,
        model_type: i32,
        device_type: i32,
    ) -> *mut std::ffi::c_void;
    fn cann_model_desc_set_model_buffer(
        desc: *mut std::ffi::c_void,
        data: *const std::ffi::c_void,
        length: u32,
    ) -> i32;
    fn cann_model_desc_destroy(desc: *mut std::ffi::c_void);

    // Dispatch: tensor I/O
    fn cann_io_tensor_create() -> *mut std::ffi::c_void;
    fn cann_io_tensor_destroy(tensor: *mut std::ffi::c_void);
    fn cann_io_tensor_init(
        tensor: *mut std::ffi::c_void,
        dim: *mut std::ffi::c_void,
        dtype: i32,
    ) -> i32;
    fn cann_io_tensor_init_with_data(
        tensor: *mut std::ffi::c_void,
        data: *const std::ffi::c_void,
        dim: *mut std::ffi::c_void,
        dtype: i32,
    ) -> i32;
    fn cann_io_tensor_set_data(
        tensor: *mut std::ffi::c_void,
        data: *const std::ffi::c_void,
        size: u32,
    ) -> i32;
    fn cann_io_tensor_get_buffer(tensor: *mut std::ffi::c_void) -> *mut std::ffi::c_void;
    fn cann_io_tensor_dim_create_nd(dims: *const u32, dim_count: i32) -> *mut std::ffi::c_void;
    fn cann_io_tensor_dim_destroy(dim: *mut std::ffi::c_void);

    // Dispatch: context
    fn cann_context_create() -> *mut std::ffi::c_void;
    fn cann_context_destroy(context: *mut std::ffi::c_void);
    fn cann_context_set_para(
        context: *mut std::ffi::c_void,
        name: *const std::ffi::c_char,
        value: *const std::ffi::c_char,
    ) -> i32;

    // Converter: graph building
    fn cann_graph_create(name: *const std::ffi::c_char) -> *mut std::ffi::c_void;
    fn cann_graph_add_op(graph: *mut std::ffi::c_void, op: *mut std::ffi::c_void) -> i32;
    fn cann_graph_set_inputs(
        graph: *mut std::ffi::c_void,
        inputs: *const *mut std::ffi::c_void,
        count: i32,
    ) -> i32;
    fn cann_graph_set_outputs(
        graph: *mut std::ffi::c_void,
        outputs: *const *mut std::ffi::c_void,
        count: i32,
    ) -> i32;
    fn cann_graph_destroy(graph: *mut std::ffi::c_void);
    fn cann_graph_is_valid(graph: *mut std::ffi::c_void) -> i32;

    // Converter: operators
    fn cann_op_data_with_name(name: *const std::ffi::c_char) -> *mut std::ffi::c_void;
    fn cann_op_const_with_name(name: *const std::ffi::c_char) -> *mut std::ffi::c_void;
    fn cann_op_net_output_with_name(
        name: *const std::ffi::c_char,
        input_count: i32,
    ) -> *mut std::ffi::c_void;
    fn cann_operator_set_input(
        op: *mut std::ffi::c_void,
        name: *const std::ffi::c_char,
        input_op: *mut std::ffi::c_void,
    ) -> i32;
    fn cann_operator_update_input_desc(
        op: *mut std::ffi::c_void,
        name: *const std::ffi::c_char,
        desc: *mut std::ffi::c_void,
    ) -> i32;
    fn cann_operator_create_dynamic_input(
        op: *mut std::ffi::c_void,
        name: *const std::ffi::c_char,
        count: u32,
    ) -> i32;
    fn cann_operator_set_dynamic_input_by_index(
        op: *mut std::ffi::c_void,
        name: *const std::ffi::c_char,
        index: u32,
        input_op: *mut std::ffi::c_void,
    ) -> i32;
    fn cann_operator_create_dynamic_output(
        op: *mut std::ffi::c_void,
        name: *const std::ffi::c_char,
        count: u32,
    ) -> i32;
    fn cann_operator_set_attr_int64_list(
        op: *mut std::ffi::c_void,
        name: *const std::ffi::c_char,
        values: *const i64,
        count: i32,
    ) -> i32;
    fn cann_operator_set_attr_tensor_raw(
        op: *mut std::ffi::c_void,
        name: *const std::ffi::c_char,
        data: *const std::ffi::c_void,
        size: u32,
        shape: *const i64,
        shape_count: i32,
        dtype: i32,
    ) -> i32;
    fn cann_operator_set_attr_tensor_raw_format(
        op: *mut std::ffi::c_void,
        name: *const std::ffi::c_char,
        data: *const std::ffi::c_void,
        size: u32,
        shape: *const i64,
        shape_count: i32,
        dtype: i32,
        format: i32,
    ) -> i32;
    fn cann_operator_set_attr_int64(
        op: *mut std::ffi::c_void,
        name: *const std::ffi::c_char,
        value: i64,
    ) -> i32;
    fn cann_operator_set_attr_float(
        op: *mut std::ffi::c_void,
        name: *const std::ffi::c_char,
        value: f32,
    ) -> i32;
    fn cann_operator_set_attr_string(
        op: *mut std::ffi::c_void,
        name: *const std::ffi::c_char,
        value: *const std::ffi::c_char,
    ) -> i32;
    fn cann_operator_destroy(op: *mut std::ffi::c_void);
    fn cann_operator_create(
        type_name: *const std::ffi::c_char,
        name: *const std::ffi::c_char,
    ) -> *mut std::ffi::c_void;
    fn cann_operator_create_registered(
        type_name: *const std::ffi::c_char,
        name: *const std::ffi::c_char,
    ) -> *mut std::ffi::c_void;

    // Converter: tensor descriptors
    fn cann_shape_create(dims: *const i64, dim_count: i32) -> *mut std::ffi::c_void;
    fn cann_shape_destroy(shape: *mut std::ffi::c_void);
    fn cann_tensor_desc_create(
        shape: *mut std::ffi::c_void,
        format: i32,
        dtype: i32,
    ) -> *mut std::ffi::c_void;
    fn cann_tensor_desc_destroy(desc: *mut std::ffi::c_void);

    // Converter: model compile
    fn cann_hiai_ir_build_create() -> *mut std::ffi::c_void;
    fn cann_hiai_ir_build_destroy(build: *mut std::ffi::c_void);
    fn cann_model_create() -> *mut std::ffi::c_void;
    fn cann_model_create_with_name(name: *const std::ffi::c_char) -> *mut std::ffi::c_void;
    fn cann_model_set_graph(model: *mut std::ffi::c_void, graph: *mut std::ffi::c_void) -> i32;
    fn cann_model_destroy(model: *mut std::ffi::c_void);
    fn cann_model_create_buff_default(
        build: *mut std::ffi::c_void,
        model: *mut std::ffi::c_void,
        buffer: *mut CannModelBuffer,
    ) -> i32;
    fn cann_build_model(
        build: *mut std::ffi::c_void,
        model: *mut std::ffi::c_void,
        options: *mut std::ffi::c_void,
        buffer: *mut CannModelBuffer,
    ) -> i32;
    fn cann_model_buffer_destroy(build: *mut std::ffi::c_void, buffer: *mut std::ffi::c_void);

    fn cann_build_options_create() -> *mut std::ffi::c_void;
    fn cann_build_options_set_input_shapes(
        options: *mut std::ffi::c_void,
        shapes: *const *const i64,
        shape_counts: *const i32,
        num_inputs: i32,
    ) -> i32;
    fn cann_build_options_set_device_order(
        options: *mut std::ffi::c_void,
        devices: *const i32,
        device_count: i32,
    ) -> i32;
}

static SHIM: LazyLock<Option<CannShim>> = LazyLock::new(|| CannShim::load().ok());

pub(crate) fn get_shim() -> Option<&'static CannShim> {
    SHIM.as_ref()
}
